# bettercap-ui

./: .gitignore  README.md  index.html  install.sh  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/bettercap/: client.rs  events.rs  mod.rs  process.rs
src-tauri/src/commands/: attack.rs  mod.rs  process.rs  scan.rs  session.rs
src/components/: EventLog.tsx  HostList.tsx  ScanControl.tsx  Settings.tsx
src/hooks/: useBettercap.ts
src/lib/: commands.ts
